# mcp-nexus

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml
cli/: agent_commands.py  main.py  schema_commands.py  trending.py
core/: agent_manager.py  registry.py  schema_builder.py  telemetry.py
data/agents/: sample_agent.json
data/schemas/: sample_schema.json
mcpgen/: create_agent.py  create_plugin.py  create_schema.py  utils.py
plugins/: sample_plugin.py
tests/: test_agents.py  test_schema.py  test_trending.py
web_dashboard/: package.json  pnpm-lock.yaml  tsconfig.json
web_dashboard/components/: AgentCard.tsx  AgentList.tsx
web_dashboard/components/ui/: Badge.tsx  Button.tsx  Card.tsx
web_dashboard/pages/: index.tsx
web_dashboard/pages/api/: agents.ts
web_dashboard/styles/: Home.module.css  globals.css  theme.ts
web_dashboard/types/: agent.ts
web_dashboard/utils/: apiResponse.ts  rateLimiter.ts  validation.ts
