[tool.poetry]
name = "mcp-nexus"
version = "0.1.0"
description = "MCP Nexus: A hub for managing agents, schemas, telemetry, and plugins."
authors = ["KhulnaSoft,Ltd <info@khulnasoft.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "core" }, { include = "cli" }, { include = "mcpgen" }]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.16.0"
rich = "^13.7.1"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[tool.poetry.scripts]
mcp = "cli.main:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
